<resources>
    <string name="app_name">AggregatedTime</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Overview</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Edit</string>
    <string name="next_month">&gt;</string>
    <string name="previous">To Overview</string>
    <string name="previous_month">&lt;</string>
    <string name="reset_month">Reset Month to Today</string>
    <string name="hello_first_fragment">Actual Month</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_fragment_label">Settings</string>
    <string name="projectActive">Project Active</string>
    <string name="save">Save</string>
</resources>